Add game mechanics enhancements to Samsara Saga

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samsara Saga</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="game-styles.css">
 <script src="https://sites.super.myninja.ai/_assets/ninja-daytona-script.js"></script>
 </head>
 <body>
@@ -57,6 +58,10 @@
     <script src="ACT3storyData.js"></script>
     
     <!-- Load engine files -->
+    <script src="ProgressionSystem.js"></script>
+    <script src="QuestSystem.js"></script>
+    <script src="VisualEffects.js"></script>
+    <script src="AudioManager.js"></script>
     <script src="GameStateManager.js"></script>
     <script src="StoryEngine.js"></script>
     <script src="PuzzleEngine.js"></script>
