--- a/Gameplay.html
+++ b/Gameplay.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/animations.css">
     <link rel="stylesheet" href="styles/character-traits.css">
+    <link rel="stylesheet" href="styles/layout.css">
 <script src="https://sites.super.myninja.ai/_assets/ninja-daytona-script.js"></script>
 </head>
 <body>
@@ -73,7 +74,7 @@
     <div class="game-wrapper">
         <!-- Main content area for narrative and choices (Left Column) -->
         <main>
-            <div id="story-container">
+            <div id="story-container" class="card section">
                 <div id="story-text" class="text-fade-in">
                     <p>The cycle turns...</p>
                     <p>You find yourself at the beginning of a new journey, your past lives echoing in the chambers of your consciousness like distant whispers.</p>
